--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-10 [菲利普亲王去世，享年99岁](/articles/ft/1045775.md)
+
 4-9 [伊朗释放韩国油轮](/articles/ft/1045776.md)
 
 4-9 [印度封禁TikTok让印度短视频应用迎来春天](/articles/ft/1045777.md)
@@ -598,6 +600,4 @@
 2-10 [散户投资者知道自己为什么要买基金吗？](/articles/ft/1046073.md)
 
 2-10 [贝莱德亚太区新负责人看好香港前景](/articles/ft/1046074.md)
-
-2-10 [New Balance在华再度打赢商标案 获赔2500万元](/articles/ft/1046075.md)
 
