--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-9 [中国人权研究会报告批美发动战争造成人道灾难](/articles/rfa/1045907.md)
+
 4-9 [西藏流亡政府改选前夕 西藏公布边境“十五禁”](/articles/rfa/1045908.md)
 
 4-9 [哈萨克族人热合江因间谍罪被囚13年  获释四年后抵哈国百人接机](/articles/rfa/1045909.md)
@@ -598,6 +600,4 @@
 3-5 [澳洲华人对民主支持度低 超八成资讯来源是微信](/articles/rfa/1046205.md)
 
 3-5 [内蒙将关停虚拟货币挖矿项目  比特币有麻烦了？](/articles/rfa/1046206.md)
-
-3-5 [江西、山东全面放开落户限制](/articles/rfa/1046207.md)
 
