--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-10 [英国女王丈夫菲利普亲王去世，74年婚姻创英国王室纪录](/articles/voa/1041616.md)
+
 4-9 [人道团体：缅甸军方仍在袭击少数民族城邦](/articles/voa/1041617.md)
 
 4-9 [专家：全球最大芯片代工厂扩大产能无法彻底缓解全球芯片短缺问题](/articles/voa/1041618.md)
@@ -598,6 +600,4 @@
 3-29 [拜登将发表经济政策讲话，美对中关税维持不变](/articles/voa/1041914.md)
 
 3-29 [12 港人案中李宇轩返港后一星期仍下落不明](/articles/voa/1041915.md)
-
-3-29 [美国誓言要俄罗斯为其行动承担“后果”](/articles/voa/1041916.md)
 
