--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 4-9 [【404文库】胡锡进｜不要因为我们有14亿人，就认为出一个金德强事件是难免的](/articles/cdt/383989.md)
 
+4-10 [南方人物周刊 | 住在公路上的人：3000万长途货车司机的苦与累](/articles/cdt/383990.md)
+
 4-9 [烟酒小僧 | 《寻找尸体的人》报道被删除风波](/articles/cdt/383992.md)
 
 4-9 [【404文库】极昼工作室｜寻找尸体的人：广东智障男子失踪两年，被杀害后顶替富人火化](/articles/cdt/383997.md)
@@ -598,6 +600,4 @@
 2-26 [潮池 | 香港電台檢討報告沒有告訴你的十件事](/articles/cdt/385505.md)
 
 2-26 [【立此存照】四川一高校教师在网络发表不当言论，已停职接受调查](/articles/cdt/385509.md)
-
-2-26 [端传媒 | 专访有线中国组：三代记者，十九载悲喜，一种失落的情怀（节选）](/articles/cdt/385511.md)
 
