--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-10 [向心夫妇涉嫌洗钱 被台湾检方起诉](/articles/voa/1041614.md)
+
+4-10 [情报机构称缅甸军政府使用中国无人机监视抗议活动](/articles/voa/1041615.md)
+
 4-10 [英国女王丈夫菲利普亲王去世，74年婚姻创英国王室纪录](/articles/voa/1041616.md)
 
 4-9 [人道团体：缅甸军方仍在袭击少数民族城邦](/articles/voa/1041617.md)
@@ -596,8 +600,4 @@
 3-29 [朝鲜指责联合国安理会在导弹试射问题上采取“双重标准”](/articles/voa/1041912.md)
 
 3-29 [台湾的缅甸侨民在“最血腥的一天”后抗议缅甸军事政变](/articles/voa/1041913.md)
-
-3-29 [拜登将发表经济政策讲话，美对中关税维持不变](/articles/voa/1041914.md)
-
-3-29 [12 港人案中李宇轩返港后一星期仍下落不明](/articles/voa/1041915.md)
 
