--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-10 [租楼、买地、收购媒体        中企正在香港扩张势力](/articles/rfa/1045905.md)
+
 4-10 [意大利阻中资收购半导体   格陵兰选民重击中国开采稀土计划](/articles/rfa/1045906.md)
 
 4-9 [中国人权研究会报告批美发动战争造成人道灾难](/articles/rfa/1045907.md)
@@ -598,6 +600,4 @@
 3-5 [美印太司令寻求270亿“威慑资金”应对中国](/articles/rfa/1046203.md)
 
 3-5 [皮尤民调：七成美国人支持在人权和经济上对华强硬](/articles/rfa/1046204.md)
-
-3-5 [澳洲华人对民主支持度低 超八成资讯来源是微信](/articles/rfa/1046205.md)
 
