--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-10 [【弄个大新闻】强制推广的“国家反诈中心app”上交隐私给国家？](/articles/cdt/383969.md)
+
 4-9 [Weifeng Yang｜翻译：汉族人是中国的白人吗？](/articles/cdt/383973.md)
 
 4-9 [【图说天朝】寒假十课](/articles/cdt/383975.md)
@@ -598,6 +600,4 @@
 2-26 [老鱼吹牛皮1 | 胡锡进做战地记者时都报道啥了？](/articles/cdt/385504.md)
 
 2-26 [潮池 | 香港電台檢討報告沒有告訴你的十件事](/articles/cdt/385505.md)
-
-2-26 [【立此存照】四川一高校教师在网络发表不当言论，已停职接受调查](/articles/cdt/385509.md)
 
