--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,26 @@
 路透
 ------
 
+4-10 [美国发布鼓励与台湾交往的新指引](/articles/reuters/1039498.md)
+
+4-10 [达拉斯联储总裁称将推动美联储尽快减少支持措施 以防出手“晚了一步”](/articles/reuters/1039499.md)
+
+4-10 [市场已经理解了欧洲央行上月加大购债规模的目的--总裁拉加德](/articles/reuters/1039500.md)
+
+4-10 [焦点：若通胀升势持续到明年 美联储制定政策时将列入考量--联储副主席](/articles/reuters/1039501.md)
+
+4-10 [白宫称中国在台湾海峡日益增加军事活动可能破坏稳定](/articles/reuters/1039502.md)
+
+4-10 [美债收益率回升拖累金价下跌 但周线料创三周来首次上涨](/articles/reuters/1039503.md)
+
+4-10 [供应增加和新一轮封锁拖累国际油价收低 周线下跌约2%](/articles/reuters/1039504.md)
+
+4-10 [英国将恢复播出中国国际电视台频道 因法国确认落地播出管辖权--金融时报](/articles/reuters/1039505.md)
+
+4-10 [美元小涨 因通胀数据扶助提振公债收益率](/articles/reuters/1039506.md)
+
+4-10 [美股标普500指数和道指均创纪录收盘高位 周线连续第三周上涨](/articles/reuters/1039507.md)
+
 4-9 [欧盟调查注射强生和阿斯利康疫苗后分别出现血凝块和出血情况的报告](/articles/reuters/1039508.md)
 
 4-9 [腾讯、爱奇艺等逾70家机构对短视频平台“开炮” 发表联合声明抵制侵权行为](/articles/reuters/1039509.md)
@@ -580,24 +600,4 @@
 4-2 [独家：欧盟寻求从印度进口1,000万剂阿斯利康疫苗 以弥补不足--消息](/articles/reuters/1039796.md)
 
 4-2 [独家：印度3月黄金进口大增471%至160吨纪录高位--消息人士](/articles/reuters/1039797.md)
-
-4-2 [焦点：尽管中美关系高度紧张 但中国恐难将减持美债作为武器--分析师](/articles/reuters/1039798.md)
-
-4-2 [WHO总干事谭德塞称期望对新冠病毒溯源进行后续调查](/articles/reuters/1039799.md)
-
-4-2 [独家：德国大众在华合资企业将从特斯拉购买新能源汽车积分--消息](/articles/reuters/1039800.md)
-
-4-2 [美元在就业报告出炉前下跌 整固近期涨势](/articles/reuters/1039801.md)
-
-4-2 [美股标普500指数首次收在4,000点上方 重量级科技股劲升带来提振](/articles/reuters/1039802.md)
-
-4-2 [油价上涨超2美元 尽管OPEC+宣布从5月起逐步降低减产力度](/articles/reuters/1039803.md)
-
-4-2 [金价攀升逾1% 受助于美元和美国公债收益率回落](/articles/reuters/1039804.md)
-
-4-1 [中国商务部：苏伊士运河堵塞影响部分企业交收货 对中国外贸影响短期](/articles/reuters/1039805.md)
-
-4-1 [韩国已向国际奥委会提议与朝鲜共同举办2032奥运会--首尔当局](/articles/reuters/1039806.md)
-
-4-1 [全球芯片供应链集中在某些地区 愈容易受重大干扰的影响--SIA研究](/articles/reuters/1039807.md)
 
