--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-10 [美国会议员促拜登以台湾替代孔子学院教学项目](/articles/voa/1041607.md)
+
+4-10 [中国力推数字人民币以撼动美元 但美联储仍然淡定](/articles/voa/1041608.md)
+
+4-10 [缅甸民选政府的驻联合国大使呼吁实施禁飞区和武器禁运](/articles/voa/1041609.md)
+
 4-10 [美国务院公布新的美台官员交往准则 台湾表示欢迎](/articles/voa/1041610.md)
 
 4-10 [民调：68%指人大修改香港选举制度 拉远民主普选距离](/articles/voa/1041611.md)
@@ -594,10 +600,4 @@
 3-29 [堵在苏伊士运河的长赐号货轮部分脱浅](/articles/voa/1041905.md)
 
 3-29 [联合国秘书长：正与中国就人权官员访问新疆严肃谈判](/articles/voa/1041906.md)
-
-3-29 [布林肯质疑中国插手世卫新冠起源报告 强调以改革防止疫情重演](/articles/voa/1041907.md)
-
-3-29 [纽约志工回馈社区](/articles/voa/1041908.md)
-
-3-29 [女性移民无畏疫情逆向操作开新店](/articles/voa/1041909.md)
 
