--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-10 [应对中国赶超 五角大楼2025年全面部署人工智能是关键](/articles/voa/1041602.md)
+
+4-10 [阿里巴巴因违反反垄断法规被罚巨款](/articles/voa/1041603.md)
+
 4-10 [回应中国制裁加拿大议员 温哥华市长暂停与中国政府官员接触](/articles/voa/1041604.md)
 
 4-10 [从即将入伍新兵和快要退伍老兵开始 五角大楼着手行动 努力排除军中极端主义](/articles/voa/1041605.md)
@@ -596,8 +600,4 @@
 3-29 [警惕爆发战争 台湾正在加强南中国海最大岛屿防御能力](/articles/voa/1041900.md)
 
 3-29 [中国官员警告H&M等品牌不要将商业活动政治化](/articles/voa/1041901.md)
-
-3-29 [艾未未引争议作品据称不会在香港M+开馆仪式上展出](/articles/voa/1041902.md)
-
-3-29 [总书记亲民秀再遇喊冤女 寄希望于“青天大老爷”的冤民](/articles/voa/1041903.md)
 
