--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-10 [香港“反送中”壁画洛杉矶落成](/articles/voa/1041601.md)
+
 4-10 [应对中国赶超 五角大楼2025年全面部署人工智能是关键](/articles/voa/1041602.md)
 
 4-10 [阿里巴巴因违反反垄断法规被罚巨款](/articles/voa/1041603.md)
@@ -598,6 +600,4 @@
 3-29 [香港无线电视不转播奥斯卡 52年来首次](/articles/voa/1041899.md)
 
 3-29 [警惕爆发战争 台湾正在加强南中国海最大岛屿防御能力](/articles/voa/1041900.md)
-
-3-29 [中国官员警告H&M等品牌不要将商业活动政治化](/articles/voa/1041901.md)
 
