--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-10 [为何99岁菲利普亲王拒绝国葬？](/articles/ft/1045774.md)
+
 4-10 [菲利普亲王去世，享年99岁](/articles/ft/1045775.md)
 
 4-9 [伊朗释放韩国油轮](/articles/ft/1045776.md)
@@ -598,6 +600,4 @@
 2-10 [2020年中国新生儿户籍登记数量下降15%](/articles/ft/1046072.md)
 
 2-10 [散户投资者知道自己为什么要买基金吗？](/articles/ft/1046073.md)
-
-2-10 [贝莱德亚太区新负责人看好香港前景](/articles/ft/1046074.md)
 
