--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-10 [新冠变种病毒P.1何以如此危险？](/articles/dw/1043062.md)
+
+4-10 [羊驼玛莉向前冲](/articles/dw/1043063.md)
+
 4-9 [耐克阿迪被打马赛克 新疆棉争议如何收场？](/articles/dw/1043064.md)
 
 4-9 [德语媒体：抵制冬奥? 动机正确 手段错误](/articles/dw/1043065.md)
@@ -596,8 +600,4 @@
 3-23 [近距离直击：美国科州超市发生枪杀案](/articles/dw/1043360.md)
 
 3-23 [高齡老奶奶 熱愛練拳擊](/articles/dw/1043361.md)
-
-3-23 [媒体：阿富汗总统或不接受美国和平方案](/articles/dw/1043362.md)
-
-3-23 [聚焦遭中方制裁的欧盟个人与实体](/articles/dw/1043363.md)
 
