--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-10 [美国公布新交往准则  深化对台关系](/articles/dw/1043058.md)
+
+4-10 [你真的了解自闭症吗？](/articles/dw/1043059.md)
+
 4-10 [金正恩号召“艰苦行军”走出“最糟糕的局面”](/articles/dw/1043060.md)
 
 4-10 [德国财政出现1890亿欧元的巨额缺口](/articles/dw/1043061.md)
@@ -596,8 +600,4 @@
 3-23 [布林肯寻求 “重振 “北约](/articles/dw/1043356.md)
 
 3-23 [缅甸暴力镇压持续 当局拒绝放开网禁](/articles/dw/1043357.md)
-
-3-23 [德语媒体：制裁有什么用？](/articles/dw/1043358.md)
-
-3-23 [聚焦遭中方制裁的欧盟实体与个人](/articles/dw/1043359.md)
 
