--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-10 [拜登1.5兆美元预算案 卫生教育总经费超出国防 – 法国国际广播电台 - RFI](/articles/rfi/1032083.md)
+
+4-10 [中国再发人权谴责 指美国201场侵略战争](/articles/rfi/1032084.md)
+
+4-10 [加省长华裔顾问称“维吾尔种族灭绝是谎言”，引发争议](/articles/rfi/1032085.md)
+
 4-10 [日本将向海洋排放核污染水遭中国质疑](/articles/rfi/1032086.md)
 
 4-10 [欧国杯12主办城市  8座表态开放观众进场 – 法国国际广播电台 - RFI](/articles/rfi/1032087.md)
@@ -594,10 +600,4 @@
 4-6 [COVID-19疫情延烧 北韩：不出席东京奥运 – 法国国际广播电台 - RFI](/articles/rfi/1032381.md)
 
 4-6 [美股上扬 道指和标普创新高 – 法国国际广播电台 - RFI](/articles/rfi/1032382.md)
-
-4-6 [核协议会谈将开 伊朗促欧洲对美施压以取消制裁 – 法国国际广播电台 - RFI](/articles/rfi/1032383.md)
-
-4-6 [运河计画遭批评 土耳其总统指退役将领暗示政变 – 法国国际广播电台 - RFI](/articles/rfi/1032384.md)
-
-4-5 [孟加拉渡轮船难  已知26人死亡 – 法国国际广播电台 - RFI](/articles/rfi/1032385.md)
 
