--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-10 [德国各州自说自话 防疫规定不同调](/articles/dw/1043051.md)
+
 4-10 [日本拟排福岛核废水入海 渔民强烈反弹](/articles/dw/1043052.md)
 
 4-10 [吉布提：经济薄弱  合作伙伴强大](/articles/dw/1043053.md)
@@ -598,6 +600,4 @@
 3-24 [德国总理默克尔呼吁民众团结抗疫](/articles/dw/1043349.md)
 
 3-24 [欧中交恶 投资协议还有戏吗？](/articles/dw/1043350.md)
-
-3-24 [英特尔投资200亿美元盖厂  挑战台积电?](/articles/dw/1043351.md)
 
