--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,14 @@
 中国数字时代
 ------
 
+4-11 [畏三何 | 安检魔咒](/articles/cdt/383919.md)
+
+4-11 [chenzijuan | 我在我的丈夫常玮平被酷刑的宝钛宾馆住了一晚](/articles/cdt/383920.md)
+
+4-11 [张正承 | “合法监听”，究竟是个什么鸟？](/articles/cdt/383924.md)
+
+4-11 [【网络民议】举报历史虚无主义“12377”上线   网民：嚯！全世界最先进的反谣言系统](/articles/cdt/383932.md)
+
 4-10 [【立此存照】重庆江津法院 | 史上最高规格！江津法院获评政法新媒体工作先进单位！](/articles/cdt/383937.md)
 
 4-10 [【网络民议】阿里被罚182亿，网民调侃“真·百亿补贴”](/articles/cdt/383939.md)
@@ -592,12 +600,4 @@
 2-28 [向承美  | 留守儿童的哭喊声, 其实是社会的撕裂声](/articles/cdt/385474.md)
 
 2-27 [思享一角 | “政府安排干部起诉政府”，法律原来可以这么玩？](/articles/cdt/385475.md)
-
-2-27 [誌 | 当结婚成为抵抗极权的方式](/articles/cdt/385484.md)
-
-2-27 [维舟 | 三十年启蒙失败了吗？](/articles/cdt/385485.md)
-
-2-27 [美国之音 | “限你三天内回国自首”：00后因言获罪，父母被警察监视居住](/articles/cdt/385486.md)
-
-2-27 [中国经营网 | “安排干部诉政府”：北京大兴疑现10余起“架空”行政诉讼案](/articles/cdt/385498.md)
 
