--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-11 [印度Covid疫情创新高 疫苗暂停出口](/articles/rfi/1032063.md)
+
 4-11 [阿里巴巴遭受创纪录罚款引各方关注 - 要闻解说](/articles/rfi/1032064.md)
 
 4-11 [贝鲁特港灾后重建 德国工程师行动快](/articles/rfi/1032065.md)
@@ -598,6 +600,4 @@
 4-6 [冰岛火山出现新裂缝 喷出橘色岩浆 – 法国国际广播电台 - RFI](/articles/rfi/1032361.md)
 
 4-6 [欧冠对阵曼城在即 多特力扫哈朗德走人传闻 – 法国国际广播电台 - RFI](/articles/rfi/1032362.md)
-
-4-6 [软银砸805亿 收购AutoStore四成股权 – 法国国际广播电台 - RFI](/articles/rfi/1032363.md)
 
