--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-11 [土耳其希望乌克兰东部危机和平解决](/articles/voa/1041593.md)
+
+4-11 [伊朗启用先进离心机提炼浓缩铀](/articles/voa/1041594.md)
+
 4-11 [缅甸安全部队两天内打死80人](/articles/voa/1041595.md)
 
 4-11 [媒体报俄疫苗死亡事件 波兰不用中国疫苗](/articles/voa/1041596.md)
@@ -596,8 +600,4 @@
 3-30 [一组联合国人权专家对中国政府据称对维吾尔人任意拘押并强迫劳动“深感关注”](/articles/voa/1041891.md)
 
 3-30 [美国宣布立即暂停实施与缅甸的贸易投资协议](/articles/voa/1041892.md)
-
-3-30 [日本政界人士呼吁首相菅义伟加入西方国家制裁中国侵犯人权行为](/articles/voa/1041893.md)
-
-3-30 [时事大家谈: 中国同时与欧美交恶，习近平拉开中西对抗的铁幕？](/articles/voa/1041894.md)
 
