--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-11 [【旧闻重温】小银 | 那些离开奥梅拉斯的人](/articles/cdt/383908.md)
+
 4-11 [外宣微记 | ​读外刊，刷抖音，常常哭笑不得](/articles/cdt/383911.md)
 
 4-11 [知灼 | 从官方的通报看，金德强自杀，很莫名其妙](/articles/cdt/383914.md)
@@ -598,6 +600,4 @@
 2-28 [【立此存照】学术会议资讯｜高校老师发表不当言论，已被停职接受警方调查](/articles/cdt/385457.md)
 
 2-28 [北同文化 | 西西教科书案：还要酝酿多久才能等来风暴](/articles/cdt/385464.md)
-
-2-28 [【网络民议】“这还不是种族歧视？说白人种族歧视的时候，看看自己吧？”](/articles/cdt/385468.md)
 
