--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-11 [报告：拜登的中国政策对金融机构的影响比特朗普时期更强](/articles/voa/1041592.md)
+
 4-11 [土耳其希望乌克兰东部危机和平解决](/articles/voa/1041593.md)
 
 4-11 [伊朗启用先进离心机提炼浓缩铀](/articles/voa/1041594.md)
@@ -598,6 +600,4 @@
 3-30 [香港多项民调指逾30%受访者计划移民 65%市民对政治前景没信心](/articles/voa/1041890.md)
 
 3-30 [一组联合国人权专家对中国政府据称对维吾尔人任意拘押并强迫劳动“深感关注”](/articles/voa/1041891.md)
-
-3-30 [美国宣布立即暂停实施与缅甸的贸易投资协议](/articles/voa/1041892.md)
 
