--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+4-11 [新疆棉为例 港官指学校不宜播中国官方指为「失实」的报道](/articles/rfi/1032048.md)
+
+4-11 [新疆一煤矿透水 仍有21人受困](/articles/rfi/1032049.md)
+
+4-11 [逾六成市民反对选举设资格审查制度 港府却考虑扩至区议会选举](/articles/rfi/1032050.md)
+
+4-11 [路透社：阿里巴巴被罚后其他巨头胆战心惊等传票](/articles/rfi/1032051.md)
+
+4-11 [圣文森火山爆发 烟尘覆盖成灰白世界 – 法国国际广播电台 - RFI](/articles/rfi/1032052.md)
+
 4-11 [缅甸安全部队最近两天内打死80多名示威者 - 要闻分析](/articles/rfi/1032053.md)
 
 4-11 [纽约时报：北京冬奥会为我们带来应对习近平的筹码](/articles/rfi/1032054.md)
@@ -590,14 +600,4 @@
 4-7 [无视美股下跌和日圆升值 日股开高 – 法国国际广播电台 - RFI](/articles/rfi/1032346.md)
 
 4-7 [涨高拉回 美股收黑 – 法国国际广播电台 - RFI](/articles/rfi/1032347.md)
-
-4-7 [IMF上修全球经济成长率 欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1032348.md)
-
-4-7 [探视遭拒  纳瓦尼支持者流放地被捕 – 法国国际广播电台 - RFI](/articles/rfi/1032349.md)
-
-4-7 [欧盟当局尚未就AZ疫苗与血栓有无关联做出结论 – 法国国际广播电台 - RFI](/articles/rfi/1032350.md)
-
-4-6 [拯救法航 法国政府将注资40亿欧元 – 法国国际广播电台 - RFI](/articles/rfi/1032351.md)
-
-4-6 [Archegos爆仓事件 瑞士信贷亏损47亿美元 – 法国国际广播电台 - RFI](/articles/rfi/1032352.md)
 
