--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-11 [菲美防长通话：盼联合军演，延续VFA？](/articles/dw/1043039.md)
+
 4-11 [不见天日熬40天: 充满争议的山洞实验](/articles/dw/1043040.md)
 
 4-11 [世界真奇妙——最大的布谷鸟钟](/articles/dw/1043041.md)
@@ -598,6 +600,4 @@
 3-24 [缅甸军政府释放600多名示威者](/articles/dw/1043337.md)
 
 3-24 [抗疫不利兼口罩丑闻危及德联盟党](/articles/dw/1043338.md)
-
-3-24 [专访：穿“我不是中国人”的T恤并不会免遭歧视](/articles/dw/1043339.md)
 
