--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-11 [伊朗核设施电路发生事故 没有污染或人员伤亡 – 法国国际广播电台 - RFI](/articles/rfi/1032032.md)
+
+4-11 [查德掌权30年总统笃定赢得大选继续执政 – 法国国际广播电台 - RFI](/articles/rfi/1032033.md)
+
 4-11 [法国调整新冠疫苗扩大接种策略 - 法国报纸摘要](/articles/rfi/1032034.md)
 
 4-11 [中国民众对疫苗缺信心但强迫接种？ 官方诺纠正](/articles/rfi/1032035.md)
@@ -596,8 +600,4 @@
 4-7 [东芝证实 考虑英国私募基金CVC收购提议 – 法国国际广播电台 - RFI](/articles/rfi/1032330.md)
 
 4-7 [疫苗接种计画进度落后 澳总理归咎欧盟限制出口 – 法国国际广播电台 - RFI](/articles/rfi/1032331.md)
-
-4-7 [抵制北京冬奥呼声渐涨 美将与盟邦商讨 – 法国国际广播电台 - RFI](/articles/rfi/1032332.md)
-
-4-7 [拜登：所有美国成年人4/19都能打COVID-19疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1032333.md)
 
