--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-11 [施明磊：自由了，程渊妻女！——4月9日完整版公开](/articles/cdt/383905.md)
+
 4-11 [【旧闻重温】小银 | 那些离开奥梅拉斯的人](/articles/cdt/383908.md)
 
 4-11 [外宣微记 | ​读外刊，刷抖音，常常哭笑不得](/articles/cdt/383911.md)
@@ -598,6 +600,4 @@
 2-28 [端传媒 | Clubhouse“两岸房”三日记：如果没有墙，我们会跟彼此聊什么？（节选）](/articles/cdt/385456.md)
 
 2-28 [【立此存照】学术会议资讯｜高校老师发表不当言论，已被停职接受警方调查](/articles/cdt/385457.md)
-
-2-28 [北同文化 | 西西教科书案：还要酝酿多久才能等来风暴](/articles/cdt/385464.md)
 
