--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-11 [反制军政府断网 缅甸年轻人靠地下刊物互通讯息 – 法国国际广播电台 - RFI](/articles/rfi/1032031.md)
+
 4-11 [伊朗核设施电路发生事故 没有污染或人员伤亡 – 法国国际广播电台 - RFI](/articles/rfi/1032032.md)
 
 4-11 [查德掌权30年总统笃定赢得大选继续执政 – 法国国际广播电台 - RFI](/articles/rfi/1032033.md)
@@ -598,6 +600,4 @@
 4-7 [中国令人反感原因 帛琉总统：在他们的语气 – 法国国际广播电台 - RFI](/articles/rfi/1032329.md)
 
 4-7 [东芝证实 考虑英国私募基金CVC收购提议 – 法国国际广播电台 - RFI](/articles/rfi/1032330.md)
-
-4-7 [疫苗接种计画进度落后 澳总理归咎欧盟限制出口 – 法国国际广播电台 - RFI](/articles/rfi/1032331.md)
 
