--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-11 [高福罕见承认中国疫苗效力低](/articles/rfi/1032028.md)
+
+4-11 [新疆棉花：四大跨国企业在巴黎遭人权诉讼](/articles/rfi/1032029.md)
+
+4-11 [新冠肺炎全球逾1亿3536万例确诊 逾292万多人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1032030.md)
+
 4-11 [反制军政府断网 缅甸年轻人靠地下刊物互通讯息 – 法国国际广播电台 - RFI](/articles/rfi/1032031.md)
 
 4-11 [伊朗核设施电路发生事故 没有污染或人员伤亡 – 法国国际广播电台 - RFI](/articles/rfi/1032032.md)
@@ -594,10 +600,4 @@
 4-7 [朝鲜宣布不参加东京奥运 重启与平壤对话期望落空](/articles/rfi/1032326.md)
 
 4-7 [日本外相应邀与中国外长举行电话会谈](/articles/rfi/1032327.md)
-
-4-7 [英国展开莫德纳疫苗接种 AZ疫苗疑虑加深 – 法国国际广播电台 - RFI](/articles/rfi/1032328.md)
-
-4-7 [中国令人反感原因 帛琉总统：在他们的语气 – 法国国际广播电台 - RFI](/articles/rfi/1032329.md)
-
-4-7 [东芝证实 考虑英国私募基金CVC收购提议 – 法国国际广播电台 - RFI](/articles/rfi/1032330.md)
 
