--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+4-12 [【立此存照】开府尹 | ​哈师大教师于琳琦发表不当言论，曝光其微博“林奇视角”，供大家批判！](/articles/cdt/383898.md)
+
+4-12 [【 麻辣总局】狗日的人民日报又骗老子……](/articles/cdt/383900.md)
+
+4-11 [Raffi Khatchadourian ：逃离新疆](/articles/cdt/383903.md)
+
 4-11 [施明磊：自由了，程渊妻女！——4月9日完整版公开](/articles/cdt/383905.md)
 
 4-11 [【旧闻重温】小银 | 那些离开奥梅拉斯的人](/articles/cdt/383908.md)
@@ -594,10 +600,4 @@
 2-28 [法广 |  香港民主派47人被控“串谋颠覆国家政权罪” 明日提堂](/articles/cdt/385444.md)
 
 2-28 [BBC | 新疆“再教育营”：新文件揭穆斯林如何因蓄须、蒙面和上网被拘留](/articles/cdt/385447.md)
-
-2-28 [【网络民议】我喜欢的博主失去了自由，我会永远祝福她](/articles/cdt/385450.md)
-
-2-28 [端传媒 | Clubhouse“两岸房”三日记：如果没有墙，我们会跟彼此聊什么？（节选）](/articles/cdt/385456.md)
-
-2-28 [【立此存照】学术会议资讯｜高校老师发表不当言论，已被停职接受警方调查](/articles/cdt/385457.md)
 
