--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-12 [柬埔寨加强防疫 从快从严处罚违禁者](/articles/rfi/1032017.md)
+
 4-12 [中国军事威胁武统台湾？美国国务卿布林肯再次警告](/articles/rfi/1032018.md)
 
 4-12 [孔子学院：欧洲才开始议论纷纷？](/articles/rfi/1032019.md)
@@ -598,6 +600,4 @@
 4-7 [法国再次停摆4周 内政部长查地下豪华餐厅 - 法国风土人情](/articles/rfi/1032315.md)
 
 4-7 [爱拉斯莫的生活与思想第十三节 惊人之作——《愚人颂》（五） - 欧洲思想文化长廊](/articles/rfi/1032316.md)
-
-4-7 [乌东对峙烽烟再起，拜登面临首个重大地缘政治考验 - 国际纵横](/articles/rfi/1032317.md)
 
