--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-12 [忧台海局势升温 美密切监控辽宁号](/articles/dw/1043031.md)
+
+4-12 [再批中国不透明 布林肯要求查清疫情起源](/articles/dw/1043032.md)
+
 4-12 [人权组织: 一天内82人在勃固市遭缅甸军方杀害](/articles/dw/1043033.md)
 
 4-11 [谈判紧要关头 伊朗议会指控总统鲁哈尼违法](/articles/dw/1043034.md)
@@ -596,8 +600,4 @@
 3-25 [东京奥运开启圣火传递](/articles/dw/1043329.md)
 
 3-25 [新疆棉花：中国网民的抵制“盛宴”](/articles/dw/1043330.md)
-
-3-25 [日首相证实：朝鲜发射两枚弹道导弹](/articles/dw/1043331.md)
-
-3-25 [脸书：中国黑客监控海外维吾尔人](/articles/dw/1043332.md)
 
