--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-12 [阿里巴巴遭182亿元重罚，这透露出什么信号？](/articles/nyt/1046978.md)
+
+4-12 [简报：阿里被罚182亿元；中国官员承认疫苗有效性较低](/articles/nyt/1046979.md)
+
 4-10 [简讯：菲利普亲王去世，享年99岁](/articles/nyt/1046980.md)
 
 4-9 [重拍版美剧《功夫》：更贴近李小龙心意的功夫片？](/articles/nyt/1046981.md)
@@ -596,8 +600,4 @@
 1-21 [特朗普离任前“挖坑”，拜登面临对华政策难题](/articles/nyt/1047276.md)
 
 1-21 [中国明星郑爽被指代孕弃养引发愤怒和争议](/articles/nyt/1047277.md)
-
-1-21 [简报：拜登宣誓就任美国总统；郑爽代孕弃养丑闻引发愤怒](/articles/nyt/1047278.md)
-
-1-20 [特朗普留给拜登一个被颠覆的世界](/articles/nyt/1047279.md)
 
