--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-12 [缅甸裔美国人在中国大使馆外举行集会 维吾尔活动人士到场声援](/articles/voa/1041582.md)
+
 4-12 [美国气候特使克里预计将于下周访问中国](/articles/voa/1041583.md)
 
 4-12 [《无依之地》获英国电影学院奖最佳影片奖 赵婷获最佳导演奖](/articles/voa/1041584.md)
@@ -598,6 +600,4 @@
 3-30 [台湾跨党派立委共同推动台版人权问责法立法](/articles/voa/1041880.md)
 
 3-30 [全国人大修订香港基本法 “爱国者治港”方针缩减地区直选至20席](/articles/voa/1041881.md)
-
-3-30 [血腥周末过后 缅甸周一抗议又有14名示威者丧生](/articles/voa/1041882.md)
 
