--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+4-12 [焦点：阿里巴巴被罚巨款后表态要降低电商进入门槛 股价早盘劲升](/articles/reuters/1039468.md)
+
+4-12 [欧盟外交高级代表称俄罗斯与中国破坏国际社会对缅甸情势的联合响应](/articles/reuters/1039469.md)
+
+4-12 [《图表新闻》五大主题：关注美国CPI与中国GDP 企业财报季接力登场](/articles/reuters/1039470.md)
+
+4-12 [亚股下跌 关注美国企业财报及重要数据](/articles/reuters/1039471.md)
+
 4-12 [英格兰部分商店恢复营业 寄望解封带来久违的购物热潮](/articles/reuters/1039472.md)
 
 4-12 [阿里巴巴承诺降低电子商务平台上商家的进入门槛和商业成本](/articles/reuters/1039473.md)
@@ -592,12 +600,4 @@
 4-2 [印尼称中国财团将向一电动车电池合资公司投资50亿美元](/articles/reuters/1039766.md)
 
 4-2 [中国银保监会批准设立山西银行，去年底山西曾发153亿“支持城商行”专项债](/articles/reuters/1039767.md)
-
-4-2 [华平投资欲设立外商参股证券公司 中国证监会已接收材料](/articles/reuters/1039768.md)
-
-4-2 [中国释放200万吨国储稻谷给饲料生产商 应对玉米价格高企--消息人士](/articles/reuters/1039769.md)
-
-4-2 [中国金融市场一周走势回顾](/articles/reuters/1039770.md)
-
-4-2 [人民币缩量收升 然录得七周连跌创逾两年半最长纪录](/articles/reuters/1039771.md)
 
