--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-12 [一周世界舆论聚焦：中国对中美关系要有具体的长远打算](/articles/ft/1045768.md)
+
 4-12 [伦敦摘得去年豪宅销量桂冠 超过香港和纽约](/articles/ft/1045769.md)
 
 4-12 [为什么中国网红费用比美国贵很多？](/articles/ft/1045770.md)
@@ -598,6 +600,4 @@
 2-10 [“资产、货币”双充裕时代的投资之道](/articles/ft/1046066.md)
 
 2-10 [华尔街的女股神是如何炼成的？](/articles/ft/1046067.md)
-
-2-10 [美国参议院投票支持继续弹劾特朗普](/articles/ft/1046068.md)
 
