--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -33,6 +33,8 @@
 
 4-10 [叁蛋蛋说｜“高人”崔伟背后有高人？](/articles/cdt/383946.md)
 
+4-12 [【CDT敏感词周报】第十九期：武汉陵园、施明磊、弑平、第93届奥斯卡](/articles/cdt/383947.md)
+
 4-10 [【中国哭墙】大概最可恶的键盘侠，在你这里也是温柔的（4月4日-10日，2021年）](/articles/cdt/383949.md)
 
 4-10 [【弄个大新闻】强制推广的“国家反诈中心app”上交隐私给国家？](/articles/cdt/383969.md)
@@ -598,6 +600,4 @@
 2-28 [【立此存照】豆瓣 | 北京外卖“骑士联盟盟主”，疑似被捕](/articles/cdt/385443.md)
 
 2-28 [法广 |  香港民主派47人被控“串谋颠覆国家政权罪” 明日提堂](/articles/cdt/385444.md)
-
-2-28 [BBC | 新疆“再教育营”：新文件揭穆斯林如何因蓄须、蒙面和上网被拘留](/articles/cdt/385447.md)
 
