--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-12 [家居绿植美学：把大自然带回家](/articles/nyt/1046977.md)
+
 4-12 [阿里巴巴遭182亿元重罚，这透露出什么信号？](/articles/nyt/1046978.md)
 
 4-12 [简报：阿里被罚182亿元；中国官员承认疫苗有效性较低](/articles/nyt/1046979.md)
@@ -598,6 +600,4 @@
 1-21 [拜登就职演说：在危机与分裂中呼吁团结](/articles/nyt/1047275.md)
 
 1-21 [特朗普离任前“挖坑”，拜登面临对华政策难题](/articles/nyt/1047276.md)
-
-1-21 [中国明星郑爽被指代孕弃养引发愤怒和争议](/articles/nyt/1047277.md)
 
