--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-12 [民众疫苗接受度低 中国专家称10亿人接种才能建立“免疫屏障”](/articles/voa/1041581.md)
+
 4-12 [缅甸裔美国人在中国大使馆外举行集会 维吾尔活动人士到场声援](/articles/voa/1041582.md)
 
 4-12 [美国气候特使克里预计将于下周访问中国](/articles/voa/1041583.md)
@@ -598,6 +600,4 @@
 3-30 [美驻帕劳大使访台湾 强调三方关系只会更密切](/articles/voa/1041879.md)
 
 3-30 [台湾跨党派立委共同推动台版人权问责法立法](/articles/voa/1041880.md)
-
-3-30 [全国人大修订香港基本法 “爱国者治港”方针缩减地区直选至20席](/articles/voa/1041881.md)
 
