--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-12 [i看见｜唐山大戏](/articles/cdt/383888.md)
+
 4-12 [【立此存照】开府尹 | ​哈师大教师于琳琦发表不当言论，曝光其微博“林奇视角”，供大家批判！](/articles/cdt/383898.md)
 
 4-12 [【 麻辣总局】狗日的人民日报又骗老子……](/articles/cdt/383900.md)
@@ -598,6 +600,4 @@
 2-28 [烧伤超人阿宝 | “鸿茅药酒”真的曾经献礼七大吗？](/articles/cdt/385434.md)
 
 2-28 [【立此存照】豆瓣 | 北京外卖“骑士联盟盟主”，疑似被捕](/articles/cdt/385443.md)
-
-2-28 [法广 |  香港民主派47人被控“串谋颠覆国家政权罪” 明日提堂](/articles/cdt/385444.md)
 
