--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,11 +1,21 @@
 中国数字时代
 ------
 
+4-12 [【404文库】枪稿｜这部电影写透了什么是“丑陋的中国人”](/articles/cdt/383877.md)
+
+4-12 [【404文库】枪稿｜《色戒》十周年](/articles/cdt/383879.md)
+
+4-12 [【404文库】枪稿｜重要的不是《出租车司机》被过誉，而是它不见了](/articles/cdt/383882.md)
+
+4-12 [【404文库】枪稿｜这部大尺度情色电影撩动了我的心弦](/articles/cdt/383886.md)
+
 4-12 [i看见｜唐山大戏](/articles/cdt/383888.md)
 
 4-12 [【立此存照】开府尹 | ​哈师大教师于琳琦发表不当言论，曝光其微博“林奇视角”，供大家批判！](/articles/cdt/383898.md)
 
 4-12 [【 麻辣总局】狗日的人民日报又骗老子……](/articles/cdt/383900.md)
+
+4-12 [【CDT周报】第十二期：体系性地避免这种悲剧发生 这样的目标值得我们竭尽全力](/articles/cdt/383901.md)
 
 4-11 [Raffi Khatchadourian ：逃离新疆](/articles/cdt/383903.md)
 
@@ -590,14 +600,4 @@
 3-1 [单读｜“城市之光”书店创始人逝世，他一生都在对抗强权](/articles/cdt/385427.md)
 
 3-1 [玖奌杂货铺｜真没想到，正能量也开始“内卷”了](/articles/cdt/385428.md)
-
-3-1 [光传媒｜林夕：如何治疗“翠字恐惧症”？](/articles/cdt/385430.md)
-
-3-1 [【立此存照】澎湃新闻 | 网民“辣笔小球”被批捕](/articles/cdt/385431.md)
-
-3-1 [【CDT周报】第六期：新时代让“虽远必诛”成为现实：虽远必诛你家人](/articles/cdt/385433.md)
-
-2-28 [烧伤超人阿宝 | “鸿茅药酒”真的曾经献礼七大吗？](/articles/cdt/385434.md)
-
-2-28 [【立此存照】豆瓣 | 北京外卖“骑士联盟盟主”，疑似被捕](/articles/cdt/385443.md)
 
