--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+4-12 [欧盟点名中国俄罗斯袒护缅甸军政权？](/articles/rfi/1031978.md)
+
+4-12 [中共党史新版本出来了 习近平地位崇高 文革毛没错](/articles/rfi/1031979.md)
+
+4-12 [德日2+2 会谈前  德外长撰文呼吁针对印太的欧洲战略](/articles/rfi/1031980.md)
+
+4-12 [财报季前投资人观望 港股收盘下跌 – 法国国际广播电台 - RFI](/articles/rfi/1031981.md)
+
+4-12 [德国COVID-19确诊数 累计突破300万例 – 法国国际广播电台 - RFI](/articles/rfi/1031982.md)
+
+4-12 [中国数字人民币计划威胁美元帝位？ 拜登要衡量](/articles/rfi/1031983.md)
+
+4-12 [白宫聚焦芯片 今开专门峰会或排斥北京](/articles/rfi/1031984.md)
+
+4-12 [松山英树高球名人赛封王 日本球迷感动欢呼 – 法国国际广播电台 - RFI](/articles/rfi/1031985.md)
+
+4-12 [川普党内会议痛批自家人 尤其对麦康奈不留情面 – 法国国际广播电台 - RFI](/articles/rfi/1031986.md)
+
 4-12 [孟晚舟案在香港获得汇丰证词法院协议 能影响加拿大庭审否未知](/articles/rfi/1031987.md)
 
 4-12 [受中国封杀 赵婷《浪迹天地》夺英国电影学院奖4大奖](/articles/rfi/1031988.md)
@@ -582,22 +600,4 @@
 4-7 [斯里兰卡选美上演闹剧 封后却遭强摘冠 – 法国国际广播电台 - RFI](/articles/rfi/1032276.md)
 
 4-7 [缅甸反对团体控军方滥权 18万件证据说分明 – 法国国际广播电台 - RFI](/articles/rfi/1032277.md)
-
-4-7 [新疆两名维吾尔前高官因“分裂”被判死缓](/articles/rfi/1032278.md)
-
-4-7 [研究：COVID-19疫苗只打第一剂恐无保护力 – 法国国际广播电台 - RFI](/articles/rfi/1032279.md)
-
-4-7 [奥赛博物馆是否应该加上德斯坦的名字？ - 文化遗产](/articles/rfi/1032280.md)
-
-4-7 [李卓人和杨森认非法游行罪但不认错 无悔为保人权以身试法 黎智英续还柙 下周五判刑](/articles/rfi/1032281.md)
-
-4-7 [国际特赦组织公布年度人权报告 疫情凸显中国恶劣人权](/articles/rfi/1032282.md)
-
-4-7 [13人涉贩运毒品  印尼判处死刑 – 法国国际广播电台 - RFI](/articles/rfi/1032283.md)
-
-4-7 [法美日印澳结束印度洋联合军演](/articles/rfi/1032284.md)
-
-4-7 [赵婷：拍自己童年经历电影 还要几年时间 – 法国国际广播电台 - RFI](/articles/rfi/1032285.md)
-
-4-7 [亚股走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1032286.md)
 
