--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,20 @@
 路透
 ------
 
+4-12 [中国3月末外币贷款创五个月新高 外币存款略降逆转连两月大增走势](/articles/reuters/1039443.md)
+
+4-12 [欧盟对原产于中国的平轧铝材产品设定19.3%-46.7%不等的临时关税](/articles/reuters/1039444.md)
+
+4-12 [东芝第三大股东呼吁寻求CVC之外的其他要约--路透见到的声明](/articles/reuters/1039445.md)
+
+4-12 [人民币缩量收升 短期难出方向关注美国通胀数据及美债标售](/articles/reuters/1039446.md)
+
+4-12 [华为未来发展战略将逐步清晰 要提升华为产业的韧性、强化软件--轮值董事长](/articles/reuters/1039447.md)
+
+4-12 [即时观点：中国3月新增贷款及社融增量一高一低 M2增速略逊预期](/articles/reuters/1039448.md)
+
+4-12 [沙特将满足多数亚洲客户减少5月石油供应的要求--消息人士](/articles/reuters/1039449.md)
+
 4-12 [腾讯支持的水滴公司赴美IPO遭到中国监管当局反对--消息人士](/articles/reuters/1039450.md)
 
 4-12 [热点聚焦：不应过分解读中国高层会议谈物价 政策着力点仍是“放水养鱼”](/articles/reuters/1039451.md)
@@ -586,18 +600,4 @@
 4-5 [美国总统拜登将推进2万亿美元基建计划 即使达不成两党协议--能源部长](/articles/reuters/1039741.md)
 
 4-5 [三星电子第一季获利料增45% 得益于手机和家电业务强劲](/articles/reuters/1039742.md)
-
-4-5 [意大利央行总裁称疫苗接种进度不一是全球经济复苏的最大威胁--FT](/articles/reuters/1039743.md)
-
-4-5 [日本首相称必要时将扩大实施紧急措施的范围 以遏制新一波新冠疫情](/articles/reuters/1039744.md)
-
-4-5 [独家：中国字节跳动称印度冻结银行帐户构成骚扰--法庭文件](/articles/reuters/1039745.md)
-
-4-5 [法国与德国呼吁各方克制 降低乌克兰东部与俄军对峙的紧张局势](/articles/reuters/1039746.md)
-
-4-5 [约旦拘留多人涉国家稳定 前王储称被软禁](/articles/reuters/1039747.md)
-
-4-5 [韩国拟邀请中国国家主席习近平在疫情稳定后访韩--韩联社](/articles/reuters/1039748.md)
-
-4-3 [欧盟敦促中国确保言论自由 BBC记者沙磊离开大陆前往台湾](/articles/reuters/1039749.md)
 
