--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-12 [德国选项党提出激进大选主张](/articles/dw/1043028.md)
+
 4-12 [美日峰会聚焦中国 专家：东京强权中求平衡](/articles/dw/1043029.md)
 
 4-12 [强迫自白受害者联署   敦促欧洲禁播中国CGTN](/articles/dw/1043030.md)
@@ -598,6 +600,4 @@
 3-25 [巨型货轮堵塞苏伊士运河 恐引发多米诺骨牌效应](/articles/dw/1043326.md)
 
 3-25 [一艘貨船如何危及全球航運？](/articles/dw/1043327.md)
-
-3-25 [贝多芬第九交响曲第一乐章](/articles/dw/1043328.md)
 
