--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-12 [缅甸政变与强人统治回归：东南亚陷入“民主疲劳”了吗](/articles/nyt/1046974.md)
+
 4-12 [现代君主制的奇迹，现代婚姻的奇迹](/articles/nyt/1046975.md)
 
 4-12 [打上马赛克的运动鞋：西方品牌因新疆棉遭中国综艺审查](/articles/nyt/1046976.md)
@@ -598,6 +600,4 @@
 1-22 [不要做中国在新疆暴行的同谋](/articles/nyt/1047272.md)
 
 1-21 [美国称中国在新疆犯“种族灭绝”罪意味着什么](/articles/nyt/1047273.md)
-
-1-21 [重返国际舞台，拜登将如何带领美国“与世界接触”](/articles/nyt/1047274.md)
 
