--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-12 [十分正经研究所｜纪念金德强君](/articles/cdt/383864.md)
+
+4-12 [【CDTV】央视批小猪佩奇、迪迦奥特曼等动漫含暴力危险镜头 B站网友怒了](/articles/cdt/383871.md)
+
 4-12 [追月数星｜为自由表达而写](/articles/cdt/383874.md)
 
 4-12 [【404文库】枪稿｜这部电影写透了什么是“丑陋的中国人”](/articles/cdt/383877.md)
@@ -596,8 +600,4 @@
 3-1 [【异闻观止】“辣笔小球”电视道歉：我的行为是一种良知泯灭的行为](/articles/cdt/385422.md)
 
 3-1 [人文英华｜中国底层县城：除了性生活，就剩打麻将](/articles/cdt/385424.md)
-
-3-1 [极昼工作室｜北漂女孩被困卫生间 30 小时：敲水管获救，因独居遭网暴](/articles/cdt/385426.md)
-
-3-1 [单读｜“城市之光”书店创始人逝世，他一生都在对抗强权](/articles/cdt/385427.md)
 
