--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-12 [伊朗指责以色列造成纳坦兹核设施停电](/articles/voa/1041579.md)
+
 4-12 [汇丰与孟晚舟就披露引渡案相关文件一事在香港达成协议](/articles/voa/1041580.md)
 
 4-12 [民众疫苗接受度低 中国专家称10亿人接种才能建立“免疫屏障”](/articles/voa/1041581.md)
@@ -598,6 +600,4 @@
 3-30 [美中关系紧张 在华美国企业处境艰难](/articles/voa/1041877.md)
 
 3-30 [百度在港二次上市 “AI第一股”前景看俏？](/articles/voa/1041878.md)
-
-3-30 [美驻帕劳大使访台湾 强调三方关系只会更密切](/articles/voa/1041879.md)
 
