--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,18 @@
 路透
 ------
 
+4-12 [香港特首：第四波疫情明显受控 抗疫新路向以“疫苗气泡”换取正常生活](/articles/reuters/1039437.md)
+
+4-12 [强生开始向欧盟提供新冠疫苗 预计第二季可达5,000万剂--议员](/articles/reuters/1039438.md)
+
+4-12 [蚂蚁集团称高度重视整改工作严肃性 已完成整改方案的研究和制定工作](/articles/reuters/1039439.md)
+
+4-12 [焦点：中国3月金融数据喜忧参半经济尚稳 货币政策仍将偏向结构性发力](/articles/reuters/1039440.md)
+
+4-12 [蚂蚁再遭中国监管约谈 要求支付宝断开与花呗借呗连接并压降余额宝余额](/articles/reuters/1039441.md)
+
+4-12 [中国3月智能手机出货量增近七成至3,527万部 疫情过后今年回升势头稳固](/articles/reuters/1039442.md)
+
 4-12 [中国3月末外币贷款创五个月新高 外币存款略降逆转连两月大增走势](/articles/reuters/1039443.md)
 
 4-12 [欧盟对原产于中国的平轧铝材产品设定19.3%-46.7%不等的临时关税](/articles/reuters/1039444.md)
@@ -588,16 +600,4 @@
 4-6 [美元跌至一周低位 节日流动性偏低放大美元走势](/articles/reuters/1039735.md)
 
 4-6 [美股道指和标普500指数创收盘纪录高位 受助于一系列强劲经济数据](/articles/reuters/1039736.md)
-
-4-6 [油价急挫逾4% 受累于OPEC+将增加供应和疫情再度加重](/articles/reuters/1039737.md)
-
-4-6 [金价微跌 股市上涨削弱黄金吸引力](/articles/reuters/1039738.md)
-
-4-5 [中国国务委员王毅再谈中美关系：中方对话大门随时敞开 不认可有高人一等国家](/articles/reuters/1039739.md)
-
-4-5 [汇市一周综述：美元看多情绪稳固 欧洲抗疫不力让欧元吃苦头](/articles/reuters/1039740.md)
-
-4-5 [美国总统拜登将推进2万亿美元基建计划 即使达不成两党协议--能源部长](/articles/reuters/1039741.md)
-
-4-5 [三星电子第一季获利料增45% 得益于手机和家电业务强劲](/articles/reuters/1039742.md)
 
