--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+4-12 [【404文库】枪稿｜我们都跪着，凭什么就你要站起来](/articles/cdt/383854.md)
+
+4-12 [【404文库】枪稿｜P大的事：从Y同学到B博士](/articles/cdt/383857.md)
+
+4-12 [【404文库】枪稿｜春晚加满的，不只是你的购物车，还有怒气槽吧](/articles/cdt/383859.md)
+
 4-12 [十分正经研究所｜纪念金德强君](/articles/cdt/383864.md)
 
 4-12 [【CDTV】央视批小猪佩奇、迪迦奥特曼等动漫含暴力危险镜头 B站网友怒了](/articles/cdt/383871.md)
@@ -594,10 +600,4 @@
 3-2 [【官网一瞥】福建省图书馆 | 俄罗斯对外舆论传播的经验与借鉴](/articles/cdt/385409.md)
 
 3-2 [王晓渔：小粉红为什么比小红多了一个“粉”字](/articles/cdt/385418.md)
-
-3-2 [【CDT网语】2021年2月网语集锦：坚持看完春晚而且还看重播的人才值得骄傲](/articles/cdt/385419.md)
-
-3-1 [【异闻观止】“辣笔小球”电视道歉：我的行为是一种良知泯灭的行为](/articles/cdt/385422.md)
-
-3-1 [人文英华｜中国底层县城：除了性生活，就剩打麻将](/articles/cdt/385424.md)
 
