--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,20 @@
 中国数字时代
 ------
 
+4-12 [【404文库】枪稿｜看看反华媒体急先锋扭腰时报又怎么大放厥词了](/articles/cdt/383824.md)
+
+4-12 [【404文库】枪稿｜点几个菜吃几两饭，谁说了算？](/articles/cdt/383826.md)
+
+4-12 [【404文库】枪稿｜终于有部电影把小粉红问题讲清楚了](/articles/cdt/383828.md)
+
+4-12 [【404文库】枪稿｜从副区长下课到电影院不开](/articles/cdt/383830.md)
+
+4-12 [【404文库】枪稿｜你再诋毁，就要国不将国啦](/articles/cdt/383832.md)
+
+4-12 [【404文库】枪稿｜WHO在删文](/articles/cdt/383834.md)
+
+4-12 [【404文库】枪稿｜金鸡金马：这么近，那么远](/articles/cdt/383836.md)
+
 4-12 [【404文库】枪稿｜我们都跪着，凭什么就你要站起来](/articles/cdt/383854.md)
 
 4-12 [【404文库】枪稿｜P大的事：从Y同学到B博士](/articles/cdt/383857.md)
@@ -586,18 +600,4 @@
 3-2 [【404文库】AI财经社｜传外卖骑士联盟盟主被捕，曾质疑饿了么春节奖励忽悠骑手](/articles/cdt/385386.md)
 
 3-2 [【异闻观止】“赵婷的《无依之地》到底是不是黑中国的？听名字像是”](/articles/cdt/385392.md)
-
-3-2 [V2EX｜Rexxar：昨天在微信群指点江山，我被请喝茶了](/articles/cdt/385397.md)
-
-3-2 [自由亚洲 | “港版美丽岛”大审判  重燃港人抗争意志](/articles/cdt/385402.md)
-
-3-2 [英国驻华使馆 | 外国媒体憎恨中国吗？](/articles/cdt/385403.md)
-
-3-2 [回声Huisheng | 反对一切形式的高考招生性别歧视，她们寄出了建议信](/articles/cdt/385406.md)
-
-3-2 [Matters | 阿川：死去的“人上人”，活着的机器性——不客观地聊聊我所接受的教育](/articles/cdt/385407.md)
-
-3-2 [【官网一瞥】福建省图书馆 | 俄罗斯对外舆论传播的经验与借鉴](/articles/cdt/385409.md)
-
-3-2 [王晓渔：小粉红为什么比小红多了一个“粉”字](/articles/cdt/385418.md)
 
