--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-12 [昂山素季受到新指控 可能终身被禁止参政](/articles/voa/1041574.md)
+
 4-12 [阿里巴巴被罚后表态要降低电商进入平台门槛 香港股价涨幅超6%](/articles/voa/1041575.md)
 
 4-12 [昂山素季受到新指控 可能终身被禁止参政](/articles/voa/1041576.md)
@@ -598,6 +600,4 @@
 3-31 [律师称孟晚舟案与美无关，检察官：美国有司法管辖权](/articles/voa/1041872.md)
 
 3-31 [中国“文化霸权”引起反华情绪，韩国娱乐业面临风险](/articles/voa/1041873.md)
-
-3-30 [中国人大通过香港选举新规 封堵民主派进入决策层](/articles/voa/1041874.md)
 
