--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-12 [重庆残疾维权人士崔斌卷入维稳人员命案被判死缓](/articles/rfa/1045896.md)
+
 4-12 [中国强制接种疫苗被叫停   高福承认国产疫苗保护力不高](/articles/rfa/1045897.md)
 
 4-12 [布林肯警告北京 试图以武力改变现状是严重错误](/articles/rfa/1045898.md)
@@ -598,6 +600,4 @@
 3-6 [中国民运人士发起全球联署：声援香港民主   抵制北京冬奥会](/articles/rfa/1046194.md)
 
 3-6 [首相亲弟警告：英国大学与中国关系太密切](/articles/rfa/1046195.md)
-
-3-6 [关注孟晚舟案：特朗普言论影响案情了吗？](/articles/rfa/1046196.md)
 
