--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,20 @@
 中国数字时代
 ------
 
+4-12 [【404文库】枪稿｜第100个三八节，谈谈福原爱和赵亭](/articles/cdt/383804.md)
+
+4-12 [【404文库】枪稿｜这一年，我们的新生儿（又名电池）更少了](/articles/cdt/383806.md)
+
+4-12 [【404文库】枪稿｜大家别骂了，阳刚之气多不了的](/articles/cdt/383807.md)
+
+4-12 [【404文库】枪稿｜《晴雅集》下架了，下一个轮到谁？](/articles/cdt/383810.md)
+
+4-12 [【404文库】枪稿｜不肯当全职太太，这位前影星给所有人惹了大麻烦](/articles/cdt/383818.md)
+
+4-12 [【404文库】枪稿｜起高楼，宴宾朋的贾樟柯，为什么又把楼拆了？](/articles/cdt/383820.md)
+
+4-12 [【404文库】枪稿｜从沉默的真相到最美XXX：假的真和真的假](/articles/cdt/383822.md)
+
 4-12 [【404文库】枪稿｜看看反华媒体急先锋扭腰时报又怎么大放厥词了](/articles/cdt/383824.md)
 
 4-12 [【404文库】枪稿｜点几个菜吃几两饭，谁说了算？](/articles/cdt/383826.md)
@@ -586,18 +600,4 @@
 3-3 [【网络民议】有哪些墙外明明很正常的事情，但在墙内人看来匪夷所思？](/articles/cdt/385367.md)
 
 3-3 [【旧闻重温】南方周末｜“外送盟主”熊焰：我在网络为骑手兄弟发声](/articles/cdt/385368.md)
-
-3-3 [鱼眼观察｜某台公开招聘主持人，结果翻车了……](/articles/cdt/385369.md)
-
-3-3 [【网络民议】“故事里的每个系统都在自卷收缩 最终连环爆破”](/articles/cdt/385375.md)
-
-3-3 [自由亚洲 | 北京贵州等地异议人士遭控制 鲍彤被禁言](/articles/cdt/385380.md)
-
-3-3 [德国之声 | 德语媒体：每况愈下的中国新闻环境](/articles/cdt/385381.md)
-
-3-3 [北同文化 | 被学校劝退的17岁同性恋：我只是想为我们的群体发声](/articles/cdt/385382.md)
-
-3-2 [【404文库】AI财经社｜传外卖骑士联盟盟主被捕，曾质疑饿了么春节奖励忽悠骑手](/articles/cdt/385386.md)
-
-3-2 [【异闻观止】“赵婷的《无依之地》到底是不是黑中国的？听名字像是”](/articles/cdt/385392.md)
 
