--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-13 [美中军舰相遇南中国海 地区紧张局势或加剧](/articles/voa/1041572.md)
+
+4-12 [美中军舰相遇南中国海 地区紧张局势或加剧](/articles/voa/1041573.md)
+
 4-12 [昂山素季受到新指控 可能终身被禁止参政](/articles/voa/1041574.md)
 
 4-12 [阿里巴巴被罚后表态要降低电商进入平台门槛 香港股价涨幅超6%](/articles/voa/1041575.md)
@@ -596,8 +600,4 @@
 3-31 [日本确认：菅义伟4月9日访美 台海稳定或被列入峰会联合公报](/articles/voa/1041870.md)
 
 3-31 [日本印尼举行2+2会议 承诺强化安全合作应对中国威胁](/articles/voa/1041871.md)
-
-3-31 [律师称孟晚舟案与美无关，检察官：美国有司法管辖权](/articles/voa/1041872.md)
-
-3-31 [中国“文化霸权”引起反华情绪，韩国娱乐业面临风险](/articles/voa/1041873.md)
 
