--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-13 [美国印太司令与日本防务相会谈 确认深化两国安全关系](/articles/voa/1041569.md)
+
 4-13 [赴华旅行需三思 加拿大警告称中国可能扣留与新疆有联系的旅客](/articles/voa/1041570.md)
 
 4-13 [欧盟指责中国俄罗斯阻碍联合国对缅军政府的制裁](/articles/voa/1041571.md)
@@ -598,6 +600,4 @@
 3-31 [时事大家谈: 新疆议题引发中欧对撞，北京亲欧策略恐破局？](/articles/voa/1041867.md)
 
 3-31 [最新民调显示，大多数美国人认为政府应该采购美国制造的商品](/articles/voa/1041868.md)
-
-3-31 [世卫报告把源头指向动物，专家质疑“实验室泄漏极不可能”的说法](/articles/voa/1041869.md)
 
