--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-13 [天价罚款后 阿里巴巴是利空出尽？还是政治风险攀升？](/articles/voa/1041568.md)
+
 4-13 [美国印太司令与日本防务相会谈 确认深化两国安全关系](/articles/voa/1041569.md)
 
 4-13 [赴华旅行需三思 加拿大警告称中国可能扣留与新疆有联系的旅客](/articles/voa/1041570.md)
@@ -598,6 +600,4 @@
 3-31 [各界回应北京人大通过修改香港选举制度 民主党批倒退无助反映民意](/articles/voa/1041866.md)
 
 3-31 [时事大家谈: 新疆议题引发中欧对撞，北京亲欧策略恐破局？](/articles/voa/1041867.md)
-
-3-31 [最新民调显示，大多数美国人认为政府应该采购美国制造的商品](/articles/voa/1041868.md)
 
