--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-13 [强迫认罪受害者联署  吁欧卫星业者封杀中国环球电视网](/articles/rfa/1045892.md)
+
 4-13 [担心中国不悦？加拿大据报干预颁奖给蔡英文](/articles/rfa/1045893.md)
 
 4-12 [西藏流亡政府大选决选   达赖喇嘛重申西藏不追求独立](/articles/rfa/1045894.md)
@@ -598,6 +600,4 @@
 3-6 [获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/rfa/1046190.md)
 
 3-6 [法律学者：香港国安法干涉司法独立](/articles/rfa/1046191.md)
-
-3-6 [李克强和汪洋有关香港的描述出现差异  引发联想](/articles/rfa/1046192.md)
 
