--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-13 [蓬佩奥上传吃凤梨干照片为访台热身？](/articles/rfi/1031942.md)
+
+4-13 [为声援学者同行 特里尔孔子学院“停摆”](/articles/rfi/1031943.md)
+
 4-13 [《视频》比利时艺术家经典“猫”姿惊艳巴黎](/articles/rfi/1031944.md)
 
 4-13 [白宫：美未涉入伊朗核设施爆炸事件 – 法国国际广播电台 - RFI](/articles/rfi/1031945.md)
@@ -596,8 +600,4 @@
 4-8 [G20将延长偿债时间 助脆弱国家抗疫 – 法国国际广播电台 - RFI](/articles/rfi/1032240.md)
 
 4-8 [香港民主运动人士罗冠聪 获英国政治庇护 – 法国国际广播电台 - RFI](/articles/rfi/1032241.md)
-
-4-8 [首尔釜山市长补选 在野党压倒性胜利 – 法国国际广播电台 - RFI](/articles/rfi/1032242.md)
-
-4-8 [伍兹车祸原因 警方：不安全速度下行驶过弯失控 – 法国国际广播电台 - RFI](/articles/rfi/1032243.md)
 
