--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-13 [美教育工作者：学术交流不应成为美中关系牺牲品](/articles/rfa/1045891.md)
+
 4-13 [强迫认罪受害者联署  吁欧卫星业者封杀中国环球电视网](/articles/rfa/1045892.md)
 
 4-13 [担心中国不悦？加拿大据报干预颁奖给蔡英文](/articles/rfa/1045893.md)
@@ -598,6 +600,4 @@
 3-6 [多国科学家公开信质疑病毒调查    电邮直指中国世卫联手隐瞒](/articles/rfa/1046189.md)
 
 3-6 [获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/rfa/1046190.md)
-
-3-6 [法律学者：香港国安法干涉司法独立](/articles/rfa/1046191.md)
 
