--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-13 [美国召开半导体高峰会  中国企业未受邀](/articles/rfa/1045889.md)
+
+4-13 [维权人士郭洪伟死亡疑点重重，八旬父母要调查到底](/articles/rfa/1045890.md)
+
 4-13 [美教育工作者：学术交流不应成为美中关系牺牲品](/articles/rfa/1045891.md)
 
 4-13 [强迫认罪受害者联署  吁欧卫星业者封杀中国环球电视网](/articles/rfa/1045892.md)
@@ -596,8 +600,4 @@
 3-8 [国际妇女节 多国女议员为新疆少数族裔妇女发声](/articles/rfa/1046187.md)
 
 3-8 [中藏协议七十年血泪 藏人台北游行 ：永不屈服](/articles/rfa/1046188.md)
-
-3-6 [多国科学家公开信质疑病毒调查    电邮直指中国世卫联手隐瞒](/articles/rfa/1046189.md)
-
-3-6 [获奖导演赵婷：从“中国的骄傲”变成“辱华分子”](/articles/rfa/1046190.md)
 
