--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-13 [当“青春期”撞上“更年期”，用“对话”改善困境](/articles/ft/1045766.md)
+
 4-12 [该不该买SPAC借壳上市的新股？](/articles/ft/1045767.md)
 
 4-12 [一周世界舆论聚焦：中国对中美关系要有具体的长远打算](/articles/ft/1045768.md)
@@ -598,6 +600,4 @@
 2-10 [“新三期叠加”挑战下，中国如何做？](/articles/ft/1046064.md)
 
 2-10 [平台经济反垄断立法，如何遏制资本无序扩张？](/articles/ft/1046065.md)
-
-2-10 [“资产、货币”双充裕时代的投资之道](/articles/ft/1046066.md)
 
