--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-13 [银河铁路局地球分局 | 一个非公开的夜晚，今夜无女入眠](/articles/cdt/383780.md)
+
+4-13 [【网络民议】豆瓣大规模封杀女权小组  网友：温水煮开了](/articles/cdt/383790.md)
+
 4-13 [世风｜肖美丽：成为“公敌”的第十二天](/articles/cdt/383800.md)
 
 4-13 [【CDT推荐】本周推荐媒体](/articles/cdt/383801.md)
@@ -596,8 +600,4 @@
 3-4 [自由亚洲 | 武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404](/articles/cdt/385354.md)
 
 3-4 [天下说法 | 为何刑讯逼供又死灰复燃了……](/articles/cdt/385355.md)
-
-3-4 [麟阁政经 | 韭菜不够，爱国生意开始“内卷”了](/articles/cdt/385357.md)
-
-3-4 [吉钟贡：新冠病毒疫情中中共的故伎重演](/articles/cdt/385358.md)
 
