--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-13 [中国派25架军机扰台 专家: 冲着美军舰而来](/articles/dw/1043013.md)
+
 4-12 [黎智英狱中来信：现在“是我们昂首站立的时候”](/articles/dw/1043014.md)
 
 4-12 [减少对美依赖 华为聚焦软件和智能汽车部件](/articles/dw/1043015.md)
@@ -598,6 +600,4 @@
 3-26 [反制中国《海警法》 美台签海巡备忘录](/articles/dw/1043311.md)
 
 3-26 [港府促14国工作假期计划拒认BNO](/articles/dw/1043312.md)
-
-3-26 [布林肯：与北约和欧盟的合作较以往关键](/articles/dw/1043313.md)
 
