--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-13 [微软以约160亿美元现金收购人工智能公司Nuance 以推动构建医疗保健云战略](/articles/reuters/1039425.md)
+
+4-13 [WHO总干事谭德塞称距离新冠疫情结束还有一大段路](/articles/reuters/1039426.md)
+
+4-13 [综述：中国宏观杠杆率料保持基本平稳 央行将呵护流动性护航地方债发行](/articles/reuters/1039427.md)
+
 4-13 [美国财长叶伦不会在汇率报告中把中国列为汇率操纵国--彭博记者推特](/articles/reuters/1039428.md)
 
 4-13 [日本政府决定将福岛核污水排入大海](/articles/reuters/1039429.md)
@@ -594,10 +600,4 @@
 4-6 [特斯拉季度交付量创纪录 激励股价一度大涨5%](/articles/reuters/1039723.md)
 
 4-6 [美联储应该在制定货币政策时“刻意保持耐心”--克利夫兰联储总裁](/articles/reuters/1039724.md)
-
-4-6 [焦点：美国财长叶伦承诺加强参与多边合作 呼吁设定全球最低企业税率](/articles/reuters/1039725.md)
-
-4-6 [焦点：拜登称上调企业税不会损害经济 没有证据表明会导致企业离开美国](/articles/reuters/1039726.md)
-
-4-6 [王毅：中日要确保不卷入所谓大国对抗 日本“不要把手伸得太长了”](/articles/reuters/1039727.md)
 
