--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-13 [叫虱 | 是疯狂消费还是热捧张维为：渴求力量感的中产阶级](/articles/cdt/383777.md)
+
 4-13 [银河铁路局地球分局 | 一个非公开的夜晚，今夜无女入眠](/articles/cdt/383780.md)
 
 4-13 [【网络民议】豆瓣大规模封杀女权小组  网友：温水煮开了](/articles/cdt/383790.md)
@@ -598,6 +600,4 @@
 3-4 [美国之音 | 白宫公布国家安全战略方针：中国是唯一有综合实力挑战国际体制的竞争者](/articles/cdt/385350.md)
 
 3-4 [自由亚洲 | 武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404](/articles/cdt/385354.md)
-
-3-4 [天下说法 | 为何刑讯逼供又死灰复燃了……](/articles/cdt/385355.md)
 
