--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-13 [美警乌龙枪杀非裔案 明尼苏达职业赛一律停摆 – 法国国际广播电台 - RFI](/articles/rfi/1031924.md)
+
+4-13 [日本正式决定福岛核废水排入海 2年后实施 – 法国国际广播电台 - RFI](/articles/rfi/1031925.md)
+
 4-13 [CNN称中国研制超音速武器速度迅猛美国处于落后地](/articles/rfi/1031926.md)
 
 4-13 [财报和经济数据公布在即 美股下跌 – 法国国际广播电台 - RFI](/articles/rfi/1031927.md)
@@ -596,8 +600,4 @@
 4-8 [调查：69%美国人使用脸书 81%是YouTube用户 – 法国国际广播电台 - RFI](/articles/rfi/1032222.md)
 
 4-8 [杨建利：病毒源头问题就是一个国际政治问题 - 要闻解说](/articles/rfi/1032223.md)
-
-4-8 [比特币“挖矿”在中国造成灾难性的碳足迹 - 法国报纸摘要](/articles/rfi/1032224.md)
-
-4-8 [16警车押送 「12港人」李宇轩在港首度现身 向公众席点头回应](/articles/rfi/1032225.md)
 
