--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,7 @@
 中国数字时代
 ------
 
-[Vista看天下 | 他们在路上搏命赚的钱，都在路上扣完了](/articles/cdt/383774.md)
+4-13 [Vista看天下 | 他们在路上搏命赚的钱，都在路上扣完了](/articles/cdt/383774.md)
 
 4-13 [东雷老评 | 服毒自尽的卡车司机金德强不应该白死啊](/articles/cdt/383776.md)
 
