--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-13 [中国加强管控互联网巨头，蚂蚁集团宣布彻底整改](/articles/nyt/1046971.md)
+
 4-13 [NBA恐难逃新疆棉争议：球员如何处理中国品牌代言](/articles/nyt/1046972.md)
 
 4-13 [简报：蚂蚁集团宣布整改；NBA会遭遇新疆棉困境吗？](/articles/nyt/1046973.md)
@@ -598,6 +600,4 @@
 1-22 [棕榈滩欢迎离任的特朗普一家吗？](/articles/nyt/1047269.md)
 
 1-22 [加班、焦虑和压力：拍摄特朗普的这四年](/articles/nyt/1047270.md)
-
-1-22 [简报：上海等多地疫情反弹；中国未兑现美中贸易协议承诺](/articles/nyt/1047271.md)
 
