--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+4-13 [弗洛伊德窒息死案庭审地再传非裔遭警枪杀 拜登呼吁和平](/articles/rfi/1031901.md)
+
+4-13 [中国疫苗效力低 匈牙利继续使用](/articles/rfi/1031902.md)
+
+4-13 [福岛核废水排入海 了解计画来龙去脉 – 法国国际广播电台 - RFI](/articles/rfi/1031903.md)
+
+4-13 [投资人逢低承接 日本股市收红 – 法国国际广播电台 - RFI](/articles/rfi/1031904.md)
+
+4-13 [印度疫情恶化 批准第3款疫苗俄国「卫星-V」紧急使用 – 法国国际广播电台 - RFI](/articles/rfi/1031905.md)
+
+4-13 [马克龙总统改革 宣布关闭法国国立政治学院 - 法国风土人情](/articles/rfi/1031906.md)
+
+4-13 [大量采购电子元器件 中国3月份进口大幅增长38.1％](/articles/rfi/1031907.md)
+
+4-13 [俄罗斯圣彼得堡红砖传奇棉纺工厂起大火](/articles/rfi/1031908.md)
+
+4-13 [中国户口再松绑？300万以下城市称可自由落户](/articles/rfi/1031909.md)
+
 4-13 [菅义伟第一位外国首脑与拜登面对面 也聚焦中国](/articles/rfi/1031910.md)
 
 4-13 [30名军人与人口失踪案有关 遭墨西哥当局逮捕 – 法国国际广播电台 - RFI](/articles/rfi/1031911.md)
@@ -582,22 +600,4 @@
 4-9 [北爱尔兰首府再次爆发骚乱 美国对北爱局势深表担忧](/articles/rfi/1032199.md)
 
 4-9 [德国和俄罗斯讨论订购俄罗斯的“卫星五号” 新冠疫苗](/articles/rfi/1032200.md)
-
-4-9 [中国发起新的宣传运动，以证明其新疆镇压政策合理 - 法国世界报](/articles/rfi/1032201.md)
-
-4-9 [法国新生儿父亲申请休全职育婴假者不到1％](/articles/rfi/1032202.md)
-
-4-9 [默克尔要求普京减少在乌克兰边境的兵力](/articles/rfi/1032203.md)
-
-4-9 [法国首批氢动力列车即将上路 迈向零排放](/articles/rfi/1032204.md)
-
-4-8 [格陵兰岛变天 左翼环保党人领先大选 中资稀土铀矿项目危了](/articles/rfi/1032205.md)
-
-4-8 [身为亚裔在美遭歧视经验  韩国电竞选手：很可怕 – 法国国际广播电台 - RFI](/articles/rfi/1032206.md)
-
-4-8 [土耳其沙发门事件 议员要求欧盟两巨头做出解释 – 法国国际广播电台 - RFI](/articles/rfi/1032207.md)
-
-4-8 [科技股走强 美股标普和那指早盘上扬 – 法国国际广播电台 - RFI](/articles/rfi/1032208.md)
-
-4-8 [美国试射极音速飞弹失败 中国利用台积电美国晶片技术突破](/articles/rfi/1032209.md)
 
