--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-13 [奇客资讯｜中国大力推广国家反诈中‪心APP](/articles/cdt/383768.md)
+
 4-13 [Vista看天下 | 他们在路上搏命赚的钱，都在路上扣完了](/articles/cdt/383774.md)
 
 4-13 [东雷老评 | 服毒自尽的卡车司机金德强不应该白死啊](/articles/cdt/383776.md)
@@ -48,6 +50,8 @@
 4-12 [【404文库】枪稿｜P大的事：从Y同学到B博士](/articles/cdt/383857.md)
 
 4-12 [【404文库】枪稿｜春晚加满的，不只是你的购物车，还有怒气槽吧](/articles/cdt/383859.md)
+
+4-13 [【404文库】三联生活周刊｜周榕：“丑陋建筑”反映了过去十几年的时代精神](/articles/cdt/383862.md)
 
 4-12 [十分正经研究所｜纪念金德强君](/articles/cdt/383864.md)
 
@@ -596,8 +600,4 @@
 3-5 [基本常识｜为了防止你家孩子阶层上升，代表委员们真的操碎了心](/articles/cdt/385342.md)
 
 3-4 [短史记｜且慢嘲笑韩国人将「回光返照」四个字挂在家里](/articles/cdt/385347.md)
-
-3-4 [网信无锡 | 抖音封禁3973个炫富账号！](/articles/cdt/385348.md)
-
-3-4 [新浪科技｜ “蚂蚁呀嘿”的这款Avatarify，在国内火完七天就下架了](/articles/cdt/385349.md)
 
