--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-13 [台湾原住民狩猎文化：在千年传统与现代法律之间](/articles/nyt/1046969.md)
+
 4-13 [奥运会还应该继续存在吗？](/articles/nyt/1046970.md)
 
 4-13 [中国加强管控互联网巨头，蚂蚁集团宣布彻底整改](/articles/nyt/1046971.md)
@@ -598,6 +600,4 @@
 1-25 [北京如何把新冠悲剧变为“中国优势”](/articles/nyt/1047267.md)
 
 1-25 [简报：武汉封城周年记；中国战机连续两日进入台湾空域](/articles/nyt/1047268.md)
-
-1-22 [棕榈滩欢迎离任的特朗普一家吗？](/articles/nyt/1047269.md)
 
