--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-13 [明尼苏达警察枪击事件后 抗议者违抗宵禁](/articles/voa/1041551.md)
+
 4-13 [推特冻结中国驻巴基斯坦外交官和驻悉尼领馆账号 一天后解封](/articles/voa/1041552.md)
 
 4-13 [医务人员奋力抗疫辛苦历程年度回顾](/articles/voa/1041553.md)
@@ -598,6 +600,4 @@
 3-31 [奥斯卡提名导演赵婷陷美中角力夹缝](/articles/voa/1041849.md)
 
 3-31 [美国务院命令非必要外交人员撤离缅甸](/articles/voa/1041850.md)
-
-3-31 [“战狼外交”的效果和走向](/articles/voa/1041851.md)
 
