--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-13 [中式没品笑话百科｜被铁拳砸中后，自称“女权主义者”的小粉红们如此抗议](/articles/cdt/383763.md)
+
 4-13 [奇客资讯｜中国大力推广国家反诈中‪心APP](/articles/cdt/383768.md)
 
 4-13 [Vista看天下 | 他们在路上搏命赚的钱，都在路上扣完了](/articles/cdt/383774.md)
@@ -598,6 +600,4 @@
 3-5 [【CDT敏感词周报】第十四期：外送骑士联盟、撒胡椒面、祈翠](/articles/cdt/385340.md)
 
 3-5 [基本常识｜为了防止你家孩子阶层上升，代表委员们真的操碎了心](/articles/cdt/385342.md)
-
-3-4 [短史记｜且慢嘲笑韩国人将「回光返照」四个字挂在家里](/articles/cdt/385347.md)
 
