--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-13 [世卫组织：新冠大流行瘟疫远未结束](/articles/dw/1043009.md)
+
+4-13 [台灣旱災恐加劇全球晶片荒？](/articles/dw/1043010.md)
+
 4-13 [日本确定排福岛核废水入海 邻国表示反对](/articles/dw/1043011.md)
 
 4-13 [中国强制整改蚂蚁集团  加大打压马云帝国](/articles/dw/1043012.md)
@@ -596,8 +600,4 @@
 3-26 [「长赐号」何时能脱困？三天还是三周](/articles/dw/1043307.md)
 
 3-26 [香港选举改革酝酿细节  下周北京料有分晓](/articles/dw/1043308.md)
-
-3-26 [这些年“伤害了中国人民感情”的国际品牌](/articles/dw/1043309.md)
-
-3-26 [新疆棉事件继续延烧 专家：北京「经济绑票」](/articles/dw/1043310.md)
 
