--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-13 [美国支持日本向海洋排放污染水](/articles/rfi/1031892.md)
+
+4-13 [中国驻法大使二度致函议员促放弃访台 提威胁制裁](/articles/rfi/1031893.md)
+
+4-13 [日本正式决定将核处理水排放入海 两年后施放 中韩反对](/articles/rfi/1031894.md)
+
 4-13 [美国对台交往发新指引 北京警告不要玩火](/articles/rfi/1031895.md)
 
 4-13 [乐视网财务受控造假长达10年 贾跃亭远避美国追偿难？](/articles/rfi/1031896.md)
@@ -594,10 +600,4 @@
 4-9 [威胁美国安全 华盛顿制裁七家中国超级计算机实体](/articles/rfi/1032190.md)
 
 4-9 [俄罗斯大军压境 乌克兰总统亲临火线 - 要闻分析](/articles/rfi/1032191.md)
-
-4-9 [前NFL球员枪杀5人后自戕 死者老夫妇及两人孙子 – 法国国际广播电台 - RFI](/articles/rfi/1032192.md)
-
-4-9 [NBA湖人暴龙上演全武行 联盟罚3球员禁赛 – 法国国际广播电台 - RFI](/articles/rfi/1032193.md)
-
-4-9 [拜登宣布6项行政命令 防止美国枪枝暴力扩散 – 法国国际广播电台 - RFI](/articles/rfi/1032194.md)
 
