--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-13 [美国与德国：重新激活安全合作](/articles/dw/1043005.md)
+
+4-13 [这些年，台湾自制的那些军事装备](/articles/dw/1043006.md)
+
 4-13 [中国外贸一枝独秀 同比猛增近三成](/articles/dw/1043007.md)
 
 4-13 [美国智库：不止是纸媒  中国试图通过西方网媒做宣传](/articles/dw/1043008.md)
@@ -596,8 +600,4 @@
 3-26 [日本欲修法限制军事敏感地带的土地买卖](/articles/dw/1043303.md)
 
 3-26 [同拜登视频会晤后 默克尔继续推“欧洲对华政策”](/articles/dw/1043304.md)
-
-3-26 [疫苗接种有成效 拜登称2024还要参选](/articles/dw/1043305.md)
-
-3-26 [孟晚舟案：法官对警官拒绝作证提出质疑](/articles/dw/1043306.md)
 
