--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+4-13 [有外国网站售亚裔我不是中国人“自保”T恤](/articles/rfi/1031882.md)
+
+4-13 [杜特蒂自称老人没生产力 愿让出疫苗接种机会 – 法国国际广播电台 - RFI](/articles/rfi/1031883.md)
+
+4-13 [加拿大航空获得政府援助1330亿元 – 法国国际广播电台 - RFI](/articles/rfi/1031884.md)
+
+4-13 [俄罗斯网将梅迪维夫染疫 退出蒙地卡罗大师赛 – 法国国际广播电台 - RFI](/articles/rfi/1031885.md)
+
+4-13 [法国学者：改变台海现状后果是灾难性的 - 国际纵横](/articles/rfi/1031886.md)
+
+4-13 [智库建议加拿大采取谨慎的印太政策 - 北美来鸿](/articles/rfi/1031887.md)
+
+4-13 [日本在反对声中宣布将福岛处理核废水排放入海 - 要闻解说](/articles/rfi/1031888.md)
+
 4-13 [黄之锋遭控违法参加集结罪获新刑4个月](/articles/rfi/1031889.md)
 
 4-13 [奥斯卡颁奖典礼本月登场 众多巨星将亲临 – 法国国际广播电台 - RFI](/articles/rfi/1031890.md)
@@ -586,18 +600,4 @@
 4-9 [公牛擒暴龙摘3连胜 抢东区季后赛最后一席占上风 – 法国国际广播电台 - RFI](/articles/rfi/1032180.md)
 
 4-9 [上海超香港 全球生活成本最高城市 称复苏与人民币商机](/articles/rfi/1032181.md)
-
-4-9 [单向通关? 特首欲放宽中国人来港后免检疫安排 滞陆港人回港免检扩至粤省外](/articles/rfi/1032182.md)
-
-4-9 [「黄店」遭海关检走近百万未贴中文解说标签货品 店家称打压 海关否认](/articles/rfi/1032183.md)
-
-4-9 [将美国枪枝暴力比作流行病 拜登宣布解决手段 – 法国国际广播电台 - RFI](/articles/rfi/1032184.md)
-
-4-9 [美国前国务卿蓬佩奥 获聘担任福斯新闻固定评论员 – 法国国际广播电台 - RFI](/articles/rfi/1032185.md)
-
-4-9 [日股收高 – 法国国际广播电台 - RFI](/articles/rfi/1032186.md)
-
-4-9 [白宫：俄军集结乌克兰东境  2014年来人数最多 – 法国国际广播电台 - RFI](/articles/rfi/1032187.md)
-
-4-9 [德国未与欧盟同步 迳自与俄罗斯谈疫苗采购惹议 – 法国国际广播电台 - RFI](/articles/rfi/1032188.md)
 
