--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-13 [菲律宾召见中国大使 对大批中国船只聚集南中国海表达“极度不满”](/articles/voa/1041548.md)
+
 4-13 [美日峰会在即，菅首相是否会明示对中战略?](/articles/voa/1041549.md)
 
 4-13 [日本政府批准福岛核废水入海排放 美中反应不同](/articles/voa/1041550.md)
@@ -598,6 +600,4 @@
 3-31 [美国国务院人权报告指香港自由与自治遭到系统性摧毁](/articles/voa/1041846.md)
 
 3-31 [BBC记者或因安全担忧离开北京前往台湾](/articles/voa/1041847.md)
-
-3-31 [帮助移英港人的“远离政治”实践者](/articles/voa/1041848.md)
 
