--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-13 [台湾太平岛被北京注册为中国商标](/articles/rfa/1045885.md)
+
 4-13 [中国公路罚款成地方政府“印钞机器”](/articles/rfa/1045886.md)
 
 4-13 [社运老将古思尧第11次坐牢  宣称为民主定会触犯国安法](/articles/rfa/1045887.md)
@@ -598,6 +600,4 @@
 3-8 [台湾学者解读两会 习近平往20大集权方向迈进](/articles/rfa/1046183.md)
 
 3-8 [坚持不改一字！殷海光著作授权中国出版破局](/articles/rfa/1046184.md)
-
-3-8 [战狼外交后遗症  原料价大涨家电价急涨两成](/articles/rfa/1046185.md)
 
