--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+4-13 [拜登召集芯片峰会 呼吁业界共克时艰](/articles/dw/1042999.md)
+
+4-13 [黄之锋因“非法集结”再获刑4个月](/articles/dw/1043000.md)
+
+4-13 [德语媒体：欧洲企业的中国风险](/articles/dw/1043001.md)
+
+4-13 [以阿里为鉴! 34家中国科技企业被要求自查整改](/articles/dw/1043002.md)
+
 4-13 [面对中国强硬姿态  日德举行二加二会议](/articles/dw/1043003.md)
 
 4-13 [含氚核废水真的不会危害健康？](/articles/dw/1043004.md)
@@ -592,12 +600,4 @@
 3-27 [台海戰爭「比想像中快」 印太戰略下日本能否幫忙?](/articles/dw/1043297.md)
 
 3-26 [球员声援人权 德国会抵制2022世界杯吗？](/articles/dw/1043298.md)
-
-3-26 [德国品牌Hugo Boss挺新疆棉？](/articles/dw/1043299.md)
-
-3-26 [德国抗疫：接下来数周将很难熬](/articles/dw/1043300.md)
-
-3-26 [中国对澳洲葡萄酒加征高额关税](/articles/dw/1043301.md)
-
-3-26 [德语媒体：中国让西方团结一心共同抵抗](/articles/dw/1043302.md)
 
