--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-13 [黎智英致信《苹果》员工 寄语同事“昂首站立”](/articles/voa/1041546.md)
+
+4-13 [香港计划立法规管破坏选举行为 煽惑他人投白票或废票属非法](/articles/voa/1041547.md)
+
 4-13 [菲律宾召见中国大使 对大批中国船只聚集南中国海表达“极度不满”](/articles/voa/1041548.md)
 
 4-13 [美日峰会在即，菅首相是否会明示对中战略?](/articles/voa/1041549.md)
@@ -596,8 +600,4 @@
 3-31 [H&M回应中国举国声讨：继续努力赢得中国客户的信任](/articles/voa/1041844.md)
 
 3-31 [香港电台“地震”持续 参赛新闻作品被勒令停止](/articles/voa/1041845.md)
-
-3-31 [美国国务院人权报告指香港自由与自治遭到系统性摧毁](/articles/voa/1041846.md)
-
-3-31 [BBC记者或因安全担忧离开北京前往台湾](/articles/voa/1041847.md)
 
