--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-14 [经济观察网｜义乌致各地公安一封信背后：众多外贸商账户被冻持续一年](/articles/cdt/383761.md)
+
 4-13 [记者刘向南｜我在两广采访“殡葬官员组织倒卖尸体案”](/articles/cdt/383762.md)
 
 4-13 [中式没品笑话百科｜被铁拳砸中后，自称“女权主义者”的小粉红们如此抗议](/articles/cdt/383763.md)
@@ -598,6 +600,4 @@
 3-5 [端传媒 | 等墙来：Clubhouse真正“活”在中文世界的片刻（节选）](/articles/cdt/385323.md)
 
 3-5 [【立此存照】“延迟退休”反对声大？“忠啃” 的老胡主动吸引火力](/articles/cdt/385332.md)
-
-3-5 [【CDT敏感词周报】第十四期：外送骑士联盟、撒胡椒面、祈翠](/articles/cdt/385340.md)
 
