--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-14 [接种娇生疫苗后出现血栓 美国1人不治 – 法国国际广播电台 - RFI](/articles/rfi/1031867.md)
+
+4-14 [埃及法院下令扣押长赐轮 – 法国国际广播电台 - RFI](/articles/rfi/1031868.md)
+
 4-14 [法国外长访问印度 夯实印太战略合作](/articles/rfi/1031869.md)
 
 4-13 [黑山欠中国债务即将到期无力还款 求助欧盟或土地抵押](/articles/rfi/1031870.md)
@@ -596,8 +600,4 @@
 4-9 [前庭审主席对吃狗肉有微言遭罢 孙杨案传要重启了](/articles/rfi/1032165.md)
 
 4-9 [中国北斗汽车导航断线闹出人命 官方赶紧出面澄清与北斗卫星导航无关](/articles/rfi/1032166.md)
-
-4-9 [投资人关注美中关系 恒生指数收跌300多点 – 法国国际广播电台 - RFI](/articles/rfi/1032167.md)
-
-4-9 [法国发现欧洲最古老3D地图 有4000年历史 – 法国国际广播电台 - RFI](/articles/rfi/1032168.md)
 
