--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-14 [蓬佩奥上传菠萝干照片 今年或将访问台湾](/articles/voa/1041541.md)
+
 4-14 [日德举行首次2+2会谈 讨论中国威胁 展开双边军事与情报合作](/articles/voa/1041542.md)
 
 4-14 [布林肯再访布鲁塞尔，乌克兰和阿富汗是焦点](/articles/voa/1041543.md)
@@ -598,6 +600,4 @@
 4-1 [台湾增购美升级版爱国者导弹提升空防能力](/articles/voa/1041839.md)
 
 4-1 [研究发现：中国的贷款协议存在保密条款 阻碍借款国的债务重新谈判](/articles/voa/1041840.md)
-
-4-1 [时事大家谈: 世卫报告疑窦重重，中国多少隐情不为人知？](/articles/voa/1041841.md)
 
