--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-14 [时事大家谈: 承认有效性不高，中国新冠疫苗政策急转弯？](/articles/voa/1041539.md)
+
+4-14 [中国债务重压黑山 各方势力角逐巴尔干让一带一路再成焦点](/articles/voa/1041540.md)
+
 4-14 [蓬佩奥上传菠萝干照片 今年或将访问台湾](/articles/voa/1041541.md)
 
 4-14 [日德举行首次2+2会谈 讨论中国威胁 展开双边军事与情报合作](/articles/voa/1041542.md)
@@ -596,8 +600,4 @@
 4-1 [在纽约街头殴打亚裔妇女的嫌疑人被逮捕](/articles/voa/1041837.md)
 
 4-1 [香港各界回应M+博物馆及新疆棉争议](/articles/voa/1041838.md)
-
-4-1 [台湾增购美升级版爱国者导弹提升空防能力](/articles/voa/1041839.md)
-
-4-1 [研究发现：中国的贷款协议存在保密条款 阻碍借款国的债务重新谈判](/articles/voa/1041840.md)
 
