--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-14 [南缅因州大学关闭孔子学院](/articles/voa/1041537.md)
+
+4-14 [各界回应港府拟禁各类查册 忧助长选举舞弊影响营商环境](/articles/voa/1041538.md)
+
 4-14 [时事大家谈: 承认有效性不高，中国新冠疫苗政策急转弯？](/articles/voa/1041539.md)
 
 4-14 [中国债务重压黑山 各方势力角逐巴尔干让一带一路再成焦点](/articles/voa/1041540.md)
@@ -596,8 +600,4 @@
 4-1 [威斯康星州最高法院推翻州长颁布的口罩令](/articles/voa/1041835.md)
 
 4-1 [澳大利亚宣布与美国合作建造导弹](/articles/voa/1041836.md)
-
-4-1 [在纽约街头殴打亚裔妇女的嫌疑人被逮捕](/articles/voa/1041837.md)
-
-4-1 [香港各界回应M+博物馆及新疆棉争议](/articles/voa/1041838.md)
 
