--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-14 [加拿大反对中国南海扩张  与东盟国家展开军事合作](/articles/rfa/1045880.md)
+
 4-14 [黑山共和国坠中国一带一路陷阱 求助欧盟遭拒](/articles/rfa/1045881.md)
 
 4-14 [上阵父子兵：一个香港抗争家庭的抵抗与流亡之路](/articles/rfa/1045882.md)
@@ -598,6 +600,4 @@
 3-13 [北京小汤山强拆后续：业主李强被带走失联   家属寻找无果](/articles/rfa/1046178.md)
 
 3-13 [多国谴责中国改变香港选制   欧盟将制裁中国官员](/articles/rfa/1046179.md)
-
-3-8 [台媒曝中国在扩建福建两军用机场](/articles/rfa/1046180.md)
 
